--- a/Dampener Selector/Dampener Selector.html
+++ b/Dampener Selector/Dampener Selector.html
@@ -215,8 +215,11 @@
     </div>
   
   
-
+    <script src= "https://github.com/os-c-ar/sample/blob/master/Dampener%20Selector/js/PD_selector.js"></script>
     
+    <!--
     <script src= "js\PD_selector.js"> </script>
+    -->    
+
 </body>
 </html>
