--- a/Dampener Selector/Dampener Selector.html
+++ b/Dampener Selector/Dampener Selector.html
@@ -209,7 +209,7 @@
 
         <a href="Documents/Griffco_Pulsation_Dampner.pdf" font> Datasheet </a> <br>
         <a href="Documents/Griffco_Pulsation_Dampener_Spanish.pdf"> Datasheet en Español </a><br>
-        <a href="Documents/Griffco Valve Price List -2017-03.pdf"> Listado de Precios 2017 </a>
+        <a href="Documents/Griffco Valve Price List -2017-03.pdf"> Listado de Precios 2017 ...</a>
 
 
     </div>
